Fix spacing in footer

--- a/styles/main.css
+++ b/styles/main.css
@@ -19,7 +19,6 @@ main {
 }
 
 footer {
-  text-align: right;
   padding: 40px;
 }
 
